--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                         <div class="about-self">
                             <div class="self-head">
                                 <h5>
-                                    Hello,I am Shamsher Freelancing web developer
+                                    Hello,I am Shamsher KC
                                 </h5>
                                 <p>
-                                    I am shamsher kc. Currently studying MSC IT and working as a freelance Website designer as weel as Developer. I am always passionate about Website Development, love to create modern Website & provide great client support.
+                                    I am shamsher kc. have completed my MSC IT and working as a software engineer. I am always passionate about Website Development, love to create modern Websites & provide great client support.
                                 </p>
                                 <p>
-                                   You can contact me if you want to develop your business web applications, your personal websites or if you have any technical support. I will be happy to help you at any time :)
+                                   You can contact me if you want to develop your business web applications or your websites or if you have any technical support. I will be happy to help you :)
                                 </p>
                             </div>
                         </div>
